--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
   <name>herokuds-maven-plugin Maven Mojo</name>
 
   <url>http://github.com/bunoabdon/herokuds-maven-plugin</url>
+
+	<distributionManagement>
+	  <snapshotRepository>
+		<id>ossrh</id>
+		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	  <repository>
+		<id>ossrh</id>
+		<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	  </repository>
+	</distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
