--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,39 @@
 		 <autoReleaseAfterClose>true</autoReleaseAfterClose>
 	  </configuration>
 	</plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.1.1</version>
+        <configuration>
+            <locale>pt_BR</locale>
+            <bottom>Copyright © 2019 Bruno Abdon</bottom>
+            <show>protected</show>
+            <quiet>true</quiet>
+        </configuration>
+        <executions>
+            <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                    <goal>jar</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
+     <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-source-plugin</artifactId>
+         <version>3.1.0</version>
+         <executions>
+             <execution>
+                 <id>attach-sources</id>
+                 <goals>
+                     <goal>jar-no-fork</goal>
+                 </goals>
+             </execution>
+         </executions>
+     </plugin>
+    
   </plugins>
 </build>
   <dependencies>
